<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical" android:padding="10dip"
		android:layout_width="fill_parent" android:layout_height="wrap_content">
		
				<TextView android:text="@string/label_space"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:textStyle="bold"
					android:paddingTop="15dip" />
				<TextView android:id="@+id/etSpaceName"
					android:paddingLeft="4pt" 
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:singleLine="false"
					android:inputType="textMultiLine"/>
					
				<TextView android:text="@string/label_description"
					android:textStyle="bold"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:paddingTop="15dip" />
				<TextView android:id="@+id/etDescription"
					android:paddingLeft="4pt" android:autoLink="web"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:singleLine="false"
					android:inputType="textMultiLine"
					 />
					 
				<TextView android:text="@string/label_type_space"
					android:textStyle="bold"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:paddingTop="15dip" />
				<TextView android:id="@+id/etTipoEspaco"
					android:paddingLeft="4pt" 
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:singleLine="false"
					android:inputType="textMultiLine"/>

				<TextView android:text="@string/label_latitude"
					android:textStyle="bold"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:paddingTop="15dip" />
				<TextView android:id="@+id/etLatitude"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:paddingLeft="4pt" />

				<TextView android:text="@string/label_longitude"
					android:textStyle="bold"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:paddingTop="15dip" />
				<TextView android:id="@+id/etLongitude"
					android:paddingLeft="4pt"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content" />

				<TextView android:text="@string/label_altitude"
					android:textStyle="bold"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:paddingTop="15dip" />
				<TextView android:id="@+id/etAltitude"
					android:paddingLeft="4pt"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content" />
		
	</LinearLayout>
	
</ScrollView>