<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="wrap_content" android:layout_width="fill_parent">
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:layout_marginBottom="50dip">

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical" android:padding="10dip"
		android:layout_width="fill_parent" android:layout_height="wrap_content">

		<TextView android:text="@string/label_space"
			android:textStyle="bold" android:gravity="top|left"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:paddingTop="7dip" />

		<EditText android:id="@+id/etSpace" android:background="#ffffff"
			android:paddingLeft="4pt" android:layout_width="fill_parent"
			android:layout_margin="2dip" android:layout_height="wrap_content"
			android:singleLine="true" />

		<TextView android:gravity="top|left" android:text="@string/label_description"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:textStyle="bold" android:paddingTop="7dip" />

		<EditText android:id="@+id/etDescription" android:background="#ffffff"
			android:paddingLeft="4pt" android:layout_width="fill_parent"
			android:layout_margin="2dip" android:singleLine="false"
			android:scrollbars="vertical" android:scrollY="50px"
			android:layout_height="wrap_content" />


		<TextView android:gravity="top|left" android:text="@string/label_type_space"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:textStyle="bold" android:paddingTop="10dip" />
		<Spinner android:id="@+id/spTypeSpace" android:layout_height="wrap_content"
			android:layout_width="fill_parent" />

		<TextView android:gravity="top|left" android:text="@string/label_altitude"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:textStyle="bold" android:paddingTop="7dip" />
		<EditText android:id="@+id/etAltitude" android:background="#ffffff"
			android:paddingLeft="4pt" android:layout_margin="2dip"
			android:layout_height="wrap_content" android:layout_width="fill_parent"
			android:numeric="decimal" />

		<RelativeLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content">

			<ImageButton android:src="@drawable/ic_map"
				android:layout_height="wrap_content" android:layout_width="wrap_content"
				android:id="@+id/btMap" android:layout_centerVertical="true" />

			<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:orientation="vertical" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:layout_toRightOf="@+id/btMap"
				android:id="@+id/llMapInputs" android:paddingTop="10dip"
				android:paddingBottom="10dip" android:paddingLeft="10dip">

				<TextView android:text="@string/label_latitude" android:id="@+id/label_latitude"
					android:textStyle="bold" android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:paddingTop="7dip" />

				<EditText android:id="@+id/etLatitude" android:background="#ffffff"
					android:paddingLeft="4pt" android:layout_margin="2dip"
					android:numeric="decimal" android:layout_width="fill_parent"
					android:layout_height="wrap_content" />

				<TextView android:textStyle="bold" android:id="@+id/label_longitude"
					android:text="@string/label_longitude" android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:paddingTop="7dip" />

				<EditText android:id="@+id/etLongitude" android:background="#ffffff"
					android:paddingLeft="4pt" android:layout_margin="2dip"
					android:numeric="decimal" android:layout_height="wrap_content"
					android:layout_width="fill_parent" />
			</LinearLayout>

		</RelativeLayout>
		
	</LinearLayout>
</ScrollView>

	<RelativeLayout android:layout_marginTop="-50dip" android:gravity="bottom" android:layout_height="wrap_content" android:layout_width="fill_parent">
        <Button android:id="@+id/btSave" android:text="@string/buttonSave"
			android:layout_height="wrap_content" android:layout_width="fill_parent" />
     </RelativeLayout>
</LinearLayout>