<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:padding="10dip"
	android:layout_width="fill_parent" android:layout_height="wrap_content">

	<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:animationCache="false" android:clipToPadding="false"
		android:padding="10dip" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:stretchColumns="2"
		android:layout_margin="2dip">

		<TableRow android:paddingTop="3dip" android:paddingBottom="3dip">
			<TextView android:text="@string/label_space_type_name"
				android:textStyle="bold" android:textSize="12px" android:gravity="top|right"
				android:paddingTop="7dip" />
			<LinearLayout android:layout_margin="2dip"
				android:layout_span="2" android:background="#BBB9B9"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:orientation="vertical">
				<EditText android:id="@+id/etSpaceType" android:textSize="10px"
					android:background="#ffffff" android:paddingLeft="4pt"
					android:layout_width="fill_parent" android:layout_margin="2dip"
					android:layout_height="10pt"></EditText>
			</LinearLayout>
		</TableRow>
		<TableRow android:paddingTop="3dip" android:paddingBottom="3dip">
			<TextView android:gravity="right" android:textStyle="bold"
				android:text="@string/label_space_type_icon" android:textSize="12px"
				android:paddingTop="7dip" />
			<ImageButton android:src="@drawable/default_local_type"
				android:scaleType="fitXY"
				android:minHeight="37px"
				android:minWidth="37px"
				android:maxHeight="37px"
				android:maxWidth="37px"
				android:layout_gravity="center_vertical|center" android:id="@+id/ibIcon" />

		</TableRow>
	</TableLayout>
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:padding="3dip">

		<Button android:layout_height="wrap_content" android:text="@string/buttonSave"
			android:layout_width="fill_parent" android:id="@+id/btSave"
			android:textSize="10px" />

	</LinearLayout>

</LinearLayout>
